objects/Promocodes__c.object
<CustomObject>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiredate__c</fullName>
        <label>Expiredate</label>
        <type>Date</type>
    </fields>
    <label>Promocodes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Promocodes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promocodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>